@@ -785,6 +785,19 @@ utf_8 (all languages)</property>
 	  </child>
 
 	  <child>
+	    <widget class="GtkButton" id="b_back">
+	      <property name="visible">True</property>
+	      <property name="sensitive">False</property>
+	      <property name="can_default">True</property>
+	      <property name="can_focus">True</property>
+	      <property name="label">gtk-go-back</property>
+	      <property name="use_stock">True</property>
+	      <property name="relief">GTK_RELIEF_NORMAL</property>
+	      <property name="focus_on_click">True</property>
+	    </widget>
+	  </child>
+
+	  <child>
 	    <widget class="GtkButton" id="b_next">
 	      <property name="visible">True</property>
 	      <property name="can_default">True</property>
