@@ -4,6 +4,9 @@ Griffith ChangeLog
 ------------------
 (c) 2005-2006 Vasco Nunes, Piotr Ożarowski
 
+2006-12-17 Jessica K. Parth <Jessica.K.P@women-at-work.org>
+	* Import CSV plugin updated to work with multiple files
+	
 2006-12-17 Piotr Ożarowski <ozarow@gmail.com>
 	* Stopklatka movie plugin updated
 	* Upgrade from old database: detect SQLite3 and print some hints
